# oa-drone-trajectory-mar-2025

./: .gitignore  README.md  SETUP.md  main.ipynb  pyproject.toml
src/: camera_utils.py  data_model.py  plan_computation.py  visualization.py
tests/: camera_utils_test.py  common.py
