[tool.poetry]
name = "drone-trajectory"
version = "1.1.0"
description = "Trajectory Planner Build Project"
authors = ["Ayush Baid <ayushrakeshbaid@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}, {include = "tests"}]

[tool.poetry.dependencies]
python = "^3.10.0"
black = "^24.8.0"
mypy = "^1.11.2"
notebook = "^7.2.2"
plotly = "^5.24.1"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
